--- a/src/styles/components/home/Hero.css
+++ b/src/styles/components/home/Hero.css
@@ -87,7 +87,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  background-image: url('src/assets/lady.jpeg'); /* Replace with actual path or use imported variable */
+  background-image: url('../../../assets/lady.jpeg');
   background-size: cover;
   background-position: right center;
   background-repeat: no-repeat;
