--- a/src/styles/components/home/Hero.css
+++ b/src/styles/components/home/Hero.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
 }
 
 /* Grid overlay */
@@ -57,17 +57,21 @@
   overflow: hidden;
 }
 
+
+
 .glass-box {
-  display: inline-block;
-  padding: 0.2em 0.6em;
-  border-radius: 12px;
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  text-align: center;
-  perspective: 1000px;
-  min-width: fit-content;
+    display: inline-block;
+    padding: 0.2em 0.6em;
+    border-radius: 12px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    text-align: center;
+    perspective: 1000px;
+    min-width: -moz-fit-content;
+    /* min-width: fit-content; */
+    width: 380px;
 }
 
 .flip-word {
@@ -75,6 +79,7 @@
   transition: transform 0.6s ease, opacity 0.6s ease;
   transform-origin: center bottom;
   backface-visibility: hidden;
+  font-size: 4rem;
 }
 
 .flip {
@@ -122,7 +127,17 @@
   display: block;
   margin-top: 1rem;
   font-size: 1.1rem;
-  color: #ccc;
+  color: #e1e1e1;
+  text-align: left;
+}
+.sipmlifyingred{
+  color: #eb1c24;
+}
+.Innovation{
+
+  /* border-bottom: 5px solid #ed1c24; */
+  font-size: 3rem !important;
+  letter-spacing: 10px;
 }
 
 @media (max-width: 1024px) {
