--- a/src/styles/pages/ContactUs.css
+++ b/src/styles/pages/ContactUs.css
@@ -73,7 +73,7 @@
 }
 
 .contact-info-icon {
-  font-size: 1rem;
+  font-size: 1.5rem;
   padding: 1rem;
 }
 
@@ -86,6 +86,7 @@
 .contact-info-text {
   color: #6B7280;
   font-size: 0.875rem;
+  font-size: 20px;
 }
 
 .contact-form {
