New changes are made

--- a/src/styles/components/common/expertteam.css
+++ b/src/styles/components/common/expertteam.css
@@ -2,7 +2,7 @@
 
 .ExpertTeam {
     font-family: "Poppins", sans-serif;
-    background-color: #ffffff;
+    background-color: #1d3750;
     padding: 20px;
     border-bottom: 1px solid #2a3243;
 }
