--- a/src/styles/components/home/CompanyVision.css
+++ b/src/styles/components/home/CompanyVision.css
@@ -122,3 +122,14 @@
 .vmfont{
   font-size: 2rem;
 }
+
+.bg-ed1c24 {
+ background: linear-gradient(
+  to top,
+
+  #1d3750 5%,
+  #c7c2c2 100%
+);
+  border-radius: 1rem;
+  /* border: 1px solid rgb(255, 255, 255); */
+}
