--- a/src/styles/components/home/CompanyVision.css
+++ b/src/styles/components/home/CompanyVision.css
@@ -123,7 +123,7 @@
   font-size: 2rem;
 }
 
-.bg-ed1c24 {
+/* .bg-ed1c24 {
  background: linear-gradient(
   to top,
 
@@ -131,5 +131,5 @@
   #c7c2c2 100%
 );
   border-radius: 1rem;
-  /* border: 1px solid rgb(255, 255, 255); */
-}
+  border: 1px solid rgb(255, 255, 255);
+} */
